--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,31 @@
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only [navPush]="addPlacePage">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Awesome Places</ion-title>
   </ion-navbar>
+
 </ion-header>
 
+
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-card *ngForm = "let place of places; let i = index" (click)="onOpenPlace(place, i)">
+    <img [src]="place.imagePath">
+    <ion-card-content text-center>
+      <ion-card-title>
+        <p>{{place.title}}</p>
+      </ion-card-title>
+      <p>{{place.description}}</p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
