--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
 
 
 <ion-content padding>
-  <ion-card *ngForm = "let place of places; let i = index" (click)="onOpenPlace(place, i)">
+  <ion-card *ngFor = "let place of places; let i = index" (click)="onOpenPlace(place, i)">
     <img [src]="place.imagePath">
     <ion-card-content text-center>
       <ion-card-title>
