--- a/src/pages/place/place.html
+++ b/src/pages/place/place.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the PlacePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{place.title}}</ion-title>
+    <ion-title>{{ place.title }}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -22,7 +16,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <p>{{place.description}}</p>
+        <p>{{ place.description }}</p>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -30,20 +24,19 @@
         <agm-map
           [latitude]="place.location.lat"
           [longitude]="place.location.lng"
-          [zoom]="15">
-          <agm-marker>
+          [zoom]="16">
+          <agm-marker
             [latitude]="place.location.lat"
-            [longitude]="place.location.lng"
-          </agm-marker>
+            [longitude]="place.location.lng"></agm-marker>
         </agm-map>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
         <button
-        ion-button
-        block
-        (click)="onLeave()">Leave</button>
+          ion-button
+          block
+          (click)="onLeave()">Leave</button>
       </ion-col>
       <ion-col>
         <button
@@ -54,5 +47,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
 </ion-content>
